configファイルのbase urlが誤っていたので変更しました

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # set `baseurl` to your root domain
 # if you set it to "/" share icons won't work properly on production
 
-baseurl = "azukibar-test.netlify.app"  # Include trailing slash
+baseurl = "https://azukibar-test.netlify.app/"  # Include trailing slash
 title = "アイスの棒"
 author = "Azuki-bar"
 copyright = "Copyright © 2021, Azuki-bar; all rights reserved."
