--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ series = "series"
     identifier = "Link"
     name = "Link"
     url = "link"
-    weight = -100
+    weight = -90
 
 
 [permalinks]
@@ -88,7 +88,7 @@ introURL = "about/" # set the url for the 'read more' button below the introDesc
 # showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
 
 # Google analytics Id
-ga_analytics = "XXXXXXXXXX"
+# ga_analytics = "XXXXXXXXXX"
 
 # Baidu analytics Id
 # baidu_analytics = "XXXXXXXX"
