メニューボタンを押したときに正しく選択ハイライトにならない不具合を修正しました

--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ series = "series"
   [[menu.main]]
     identifier = "Link"
     name = "Link"
-    url = "link"
+    url = "/link/"
     weight = -90
 
 
