ブログ記事へのリンクをyear/month/filename に変更しました

--- a/config.toml
+++ b/config.toml
@@ -73,7 +73,7 @@ series = "series"
 
 
 [permalinks]
-  blog = "/blog/:year/:month/:title/"
+  blog = "/blog/:year/:month/:filename/"
 
 [params]
 author = "あずきバー"
