--- a/config.toml
+++ b/config.toml
@@ -97,7 +97,7 @@ introURL = "about/" # set the url for the 'read more' button below the introDesc
 numberOfTagsShown = 14 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
 
 # will be used on share >> twitter, facebook, linkedin
-fallBackOgImage = "images/ogp.png"
+thumbnail = "images/ogp.png"
 
 # sets the maximum number of lines per codeblock. The codeblock will however be scrollable and expandable.
 codeMaxLines = 7
