Aboutだけ頭文字が小文字だったので大文字に統一しました

--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ series = "series"
 
   [[menu.main]]
     identifier = "about"
-    name = "about"
+    name = "About"
     # pre = "<i class='fa fa-heart'></i>"
     url = "/about/"
     weight = 0
