--- a/netlify.toml
+++ b/netlify.toml
@@ -28,3 +28,9 @@ HUGO_VERSION = "0.80.0"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+from = "/init"
+to = "https://raw.githubusercontent.com/Azuki-bar/dotfiles/master/init.sh"
+status = 302
+
