--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,6 @@ disqusShortname = ""
 
 DefaultContentLanguage = "jp"
 
-googleAnaltyics = "UA-194329348-1"
 # [languages]
 # config/_default/languages.toml
 #
@@ -89,7 +88,7 @@ introURL = "about/" # set the url for the 'read more' button below the introDesc
 # showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
 
 # Google analytics Id
-# ga_analytics = "XXXXXXXXXX"
+ga_analytics = "UA-194329348-1"
 
 # Baidu analytics Id
 # baidu_analytics = "XXXXXXXX"
