--- a/config.toml
+++ b/config.toml
@@ -88,13 +88,13 @@ introURL = "about/" # set the url for the 'read more' button below the introDesc
 # showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
 
 # Google analytics Id
-ga_analytics = "UA-194329348-1"
+#ga_analytics = "UA-194329348-1"
 
 # Baidu analytics Id
 # baidu_analytics = "XXXXXXXX"
 
 # Cloud Flare analytics token
-cf_analytics = "8bb32dd353d541d8ace4524eb3557e68"
+#cf_analytics = "8bb32dd353d541d8ace4524eb3557e68"
 
 # limit the number of taxonomies links shown on the sidebar of each page by default.
 numberOfTagsShown = 14 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
