--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,8 @@ ga_analytics = "UA-194329348-1"
 # baidu_analytics = "XXXXXXXX"
 
 # Cloud Flare analytics token
-#cf_analytics = "8bb32dd353d541d8ace4524eb3557e68"
+# this is not secret token
+# cf_analytics = "8bb32dd353d541d8ace4524eb3557e68"
 
 # limit the number of taxonomies links shown on the sidebar of each page by default.
 numberOfTagsShown = 14 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
